--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,7 @@
-# Extension-less executables #
-##############################
-*
-!*.*
-!*/
-
-# Binaries #
-###################
-*.bak
+**/*.synctex.gz
 *.log
+*.bak
+*.bbl
 *.aux
+*.blg
 *.pdf
-
-# Packages #
-############
-*.gz
-
